tests/miniJava/pos/000664_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) while ( 0 ) { } else java [ 0 ] = 0 ; } }
