tests/miniJava/neg/003480_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java int [] java ; 0 ] = 0 ; } }
